--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 <header>
   <span class="logo">
-    <img src="data:image/png;base64,..." alt="logo">
+    <img src="https://www.epg-module.com/logo.png" alt="EPG Module Logo">
   </span>
   <span class="title">EPG EHS System</span>
 </header>
@@ -157,19 +157,19 @@
     </div>
     <div id="chinese" class="audio-section">
       <audio controls>
-        <source src="Chinese_voice_over_induction_H.mp3" type="audio/mpeg">
+        <source src="ChinesenH.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
     <div id="vietnamese" class="audio-section">
       <audio controls>
-        <source src="Vietnam_voice_over_induction_H.mp3" type="audio/mpeg">
+        <source src="VietnamH.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
     <div id="bangla" class="audio-section">
       <audio controls>
-        <source src="Bangla_voice_over_induction_H.mp3" type="audio/mpeg">
+        <source src="BanglaH.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
