--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <body>
   <header>
-    <img src="https://epailxi.github.io/EPGLogo%20(1).png" alt="EPG Logo">
+    <img src="https://epailxi.github.io/EPGEHSSYSTEM/EPGLogo.png" alt="EPG Logo">
     <h1>EPG EHS System</h1>
   </header>
 
