--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
       margin-bottom: 8px;
       height: 32px;
     }
+
+    .video-section {
+      display: none;
+    }
   </style>
 </head>
 
@@ -139,11 +143,17 @@
     <button onclick="activateTab('voiceover')" type="button">Voiceover</button>
     <button onclick="activateTab('ppe')" type="button">PPE Inventory</button>
     <button onclick="activateTab('ppeform')" type="button">PPE Form</button>
+    <button onclick="activateTab('sitevisitor')" type="button">Site Visitor Safety</button>
   </div>
 
   <div class="subtabs" id="ppeSubtabs">
     <button onclick="activateSubtab('issue')" type="button">Issue & Return</button>
     <button onclick="activateSubtab('search')" type="button">Search</button>
+  </div>
+
+  <div class="subtabs" id="siteVisitorSubtabs" style="display:none;">
+    <button onclick="activateVisitorSubtab('english')" type="button">English</button>
+    <button onclick="activateVisitorSubtab('chinese')" type="button">Chinese</button>
   </div>
 
   <div class="voice-buttons" id="voiceButtons">
@@ -156,7 +166,7 @@
     <div class="loader" id="loader">Loading...</div>
     <iframe id="mainFrame" loading="lazy"></iframe>
 
-    <!-- Voiceover: Controls on top -->
+    <!-- Voiceover Sections -->
     <div class="audio-section" id="chinese">
       <audio controls>
         <source src="ChineseH.mp3" type="audio/mpeg">
@@ -180,6 +190,21 @@
       </audio>
       <p>এটি বাংলা ভাষার বিষয়বস্তু...</p>
     </div>
+
+    <!-- Site Visitor Video Sections -->
+    <div class="video-section" id="visitorEnglish">
+      <video controls width="100%" height="500px">
+        <source src="SiteVisitorEnglish.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
+    <div class="video-section" id="visitorChinese">
+      <video controls width="100%" height="500px">
+        <source src="SiteVisitorInformationChinese.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </div>
 
   <script>
@@ -187,33 +212,35 @@
       document.querySelectorAll('.tabs button').forEach(btn => btn.classList.remove('active'));
       document.querySelector(`.tabs button[onclick*="${tab}"]`).classList.add('active');
 
-      document.getElementById('ppeSubtabs').style.display = tab === 'ppeform' ? 'flex' : 'none';
-      document.getElementById('voiceButtons').style.display = tab === 'voiceover' ? 'flex' : 'none';
+      // Hide all subtabs and voice buttons
+      document.getElementById('ppeSubtabs').style.display = 'none';
+      document.getElementById('voiceButtons').style.display = 'none';
+      document.getElementById('siteVisitorSubtabs').style.display = 'none';
 
-      // Stop all audio
+      // Stop all audio and hide all video sections
       document.querySelectorAll('audio').forEach(a => a.pause());
       document.querySelectorAll('.audio-section').forEach(s => s.classList.remove('active'));
+      document.querySelectorAll('.video-section').forEach(v => v.style.display = 'none');
 
       const iframe = document.getElementById('mainFrame');
       const loader = document.getElementById('loader');
       loader.style.display = 'block';
       iframe.style.display = 'none';
 
-      let src = '';
-      switch (tab) {
-        case 'induction': src = 'https://epailxi.github.io/EPGNTPINDUCTION'; break;
-        case 'cidb': src = 'https://epailxi.github.io/CIDBSlipDownload'; break;
-        case 'immigration': src = 'https://eservices.imi.gov.my/myimms/FomemaStatus'; break;
-        case 'ppe': src = 'https://twswzvv3ark.sg.feishu.cn/file/EJDJbsCNZoMoRIx2wujlpazVgDh'; break;
-        case 'ppeform':
-          activateSubtab('issue');
-          return;
-        case 'voiceover':
-          iframe.src = '';
+      switch(tab) {
+        case 'induction': iframe.src = 'https://epailxi.github.io/EPGNTPINDUCTION'; break;
+        case 'cidb': iframe.src = 'https://epailxi.github.io/CIDBSlipDownload'; break;
+        case 'immigration': iframe.src = 'https://eservices.imi.gov.my/myimms/FomemaStatus'; break;
+        case 'ppe': iframe.src = 'https://twswzvv3ark.sg.feishu.cn/file/EJDJbsCNZoMoRIx2wujlpazVgDh'; break;
+        case 'ppeform': activateSubtab('issue'); return;
+        case 'voiceover': iframe.src = ''; loader.style.display='none'; return;
+        case 'sitevisitor':
+          document.getElementById('siteVisitorSubtabs').style.display = 'flex';
+          activateVisitorSubtab('english'); // default subtab
           loader.style.display = 'none';
           return;
       }
-      iframe.src = src;
+
       iframe.onload = () => loader.style.display = 'none';
       iframe.style.display = 'block';
       localStorage.setItem('selectedTab', tab);
@@ -222,6 +249,7 @@
     function activateSubtab(subtab) {
       document.querySelectorAll('#ppeSubtabs button').forEach(btn => btn.classList.remove('active'));
       document.querySelector(`#ppeSubtabs button[onclick*="${subtab}"]`).classList.add('active');
+
       const iframe = document.getElementById('mainFrame');
       const loader = document.getElementById('loader');
       loader.style.display = 'block';
@@ -242,6 +270,18 @@
       document.querySelector(`.voice-buttons button[onclick*="${lang}"]`).classList.add('active');
       document.querySelectorAll('.audio-section').forEach(sec => sec.classList.remove('active'));
       document.getElementById(lang).classList.add('active');
+    }
+
+    function activateVisitorSubtab(lang) {
+      document.querySelectorAll('#siteVisitorSubtabs button').forEach(btn => btn.classList.remove('active'));
+      document.querySelector(`#siteVisitorSubtabs button[onclick*="${lang}"]`).classList.add('active');
+
+      document.querySelectorAll('.video-section').forEach(v => v.style.display = 'none');
+      document.getElementById('visitor'+capitalize(lang)).style.display = 'block';
+    }
+
+    function capitalize(str) {
+      return str.charAt(0).toUpperCase() + str.slice(1);
     }
 
     // Restore last selected tab on load
